--- a/sample.ipynb
+++ b/sample.ipynb
@@ -19,24 +19,23 @@
    "outputs": [],
    "source": [
     "sc = SparkContext(\"local\", \"post-sales-auto\")\n",
-    "raw_rdd = sc.textFile(\"data.csv\")"
+    "raw_rdd = sc.textFile(\"sample/data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_vin_key_value(row):\n",
-    "\n",
     "    auto = row.strip().split(\",\")\n",
     "    return (auto[2], (auto[1], auto[3], auto[5]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +68,7 @@
        " ('INU45KIOOPA343980', ('A', '', ''))]"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,61 +91,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def retrieve_make_year(row):\n",
-    "    alist = []\n",
-    "    \n",
+    "def populate_make(row):\n",
+    "#     alist = [row]\n",
+    "#     for i in alist:\n",
+    "#         ab = list(i)\n",
+    "#         return ab\n",
+    "    group_master = []\n",
     "    for i in row:\n",
-    "    \n",
-    "#     vin_make_year = (row[0], row[1])\n",
-    "#     for i in vin_make_year[1]:\n",
-    "#         return (vin_make_year[0], i[1], i[2])"
+    "        group_master.append(list(i))\n",
+    "        \n",
+    "    for i in range(0, len(group_master)):\n",
+    "        make = group_master[i-1][1]\n",
+    "        year = group_master[i-1][2]\n",
+    "        \n",
+    "        if group_master[i][0] != 'I':\n",
+    "            if group_master[i][1] == '' and group_master[i][2] == '':\n",
+    "                group_master[i][1] = make\n",
+    "                group_master[i][2] = year\n",
+    "        \n",
+    "    return group_master\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vin_make_year = vin_kv.groupByKey().flatMap(lambda row: retrieve_make_year(row[1]))"
+    "enhance_make = vin_kv.groupByKey().flatMap(lambda row: populate_make(row[1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
-   "metadata": {},
+   "execution_count": 287,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['I',\n",
-       " 'Nissan',\n",
-       " '2003',\n",
-       " 'I',\n",
-       " 'Mercedes',\n",
-       " '2015',\n",
-       " 'I',\n",
-       " 'Mercedes',\n",
-       " '2015',\n",
-       " 'I',\n",
-       " 'Mercedes',\n",
-       " '2016',\n",
-       " 'I',\n",
-       " 'Toyota',\n",
-       " '2017']"
+       "[['I', 'Nissan', '2003'],\n",
+       " ['A', 'Nissan', '2003'],\n",
+       " ['R', 'Nissan', '2003'],\n",
+       " ['R', 'Nissan', '2003'],\n",
+       " ['I', 'Mercedes', '2015'],\n",
+       " ['A', 'Mercedes', '2015'],\n",
+       " ['I', 'Mercedes', '2015'],\n",
+       " ['R', 'Mercedes', '2015'],\n",
+       " ['A', 'Mercedes', '2015'],\n",
+       " ['R', 'Mercedes', '2015'],\n",
+       " ['R', 'Mercedes', '2015'],\n",
+       " ['I', 'Mercedes', '2016'],\n",
+       " ['R', 'Mercedes', '2016'],\n",
+       " ['A', 'Mercedes', '2016'],\n",
+       " ['I', 'Toyota', '2017'],\n",
+       " ['R', 'Toyota', '2017']]"
       ]
      },
-     "execution_count": 577,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vin_make_year.collect()"
+    "enhance_make.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['R', '', '', 'A', '', '', 'R', '', '', 'A', '', '', 'R', '', '']"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enhance_make.collect()"
    ]
   },
   {
